v2..0803 Critical Performance Fix with singleResult bringing all to get(0) one without limited list!